--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,14 @@
+/* VARIABLES */
+:root{
+    --background-color-main: #d9dcd6;
+    --background-color-header: #2a607c;
+    --background-color-content: #0072bb;
+    --background-color-aside: #2589bd;
+
+    --font-color: #ffffff;
+}
+
+/* DEFAULT SETTINGS  */
 * {
     box-sizing: border-box;
     padding: 0;
@@ -5,14 +16,15 @@
 }
 
 body {
-    background-color: #d9dcd6;
+    background-color: var(--background-color-main);
 }
 
+/* HEADER */
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #2a607c;
-    color: #ffffff;
+    background-color: var(--background-color-header);
+    color: var(--font-color);
 }
 
 .header h1 {
@@ -21,10 +33,11 @@ body {
 }
 
 .header h1 .seo {
-    color: #d9dcd6;
+    color: var(--background-color-main);
 }
 
-.header div {
+/* NAVIGATION */
+.header .nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,24 +45,21 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+.nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+.nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
 
-a {
-    color: #ffffff;
+.nav ul li a {
+    color: var(--font-color);
     text-decoration: none;
 }
 
-p {
-    font-size: 16px;
-}
-
+/* HEADER IMAGE PLACEHOLDER */
 .hero {
     height: 800px;
     width: 100%;
@@ -57,6 +67,35 @@ p {
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
+}
+
+/* MAIN CONTENT */
+.content {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
+}
+
+.content__article {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: var(--background-color-content);
+    color: var(--font-color);
+}
+
+.content__article img {
+    max-height: 200px;
+}
+
+.content__article h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+.content__article p {
+    font-size: 16px;
 }
 
 .float-left {
@@ -69,12 +108,7 @@ p {
     margin-left: 25px;
 }
 
-.content {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
-}
-
+/* ASIDE CONTENT */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -83,111 +117,26 @@ p {
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
+    background-color: var(--background-color-aside);
 }
 
-.benefit-lead {
+.benefit__article {
     margin-bottom: 32px;
-    color: #ffffff;
+    color: var(--font-color);
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefit__article h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefit__article img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
+/* FOOTER */
 .footer {
     padding: 30px;
     clear: both;
